--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,24 +9,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Source
-      uses: actions/checkout@v4
-    - name: Login to DockerHub  
-      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-   - name: Build Docker Image
-      run: docker build -t rakesh127/my-node-app:latest .
-  - name: Publish Image to docker hub
-    run: docker push rakesh127/my-node-app:latest
-
+      - name: Checkout Source
+        uses: actions/checkout@v4
+      - name: Login to DockerHub  
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build Docker Image
+        run: docker build -t rakesh127/my-node-app:latest .
+      - name: Publish Image to Docker Hub
+        run: docker push rakesh127/my-node-app:latest
 
   deploy:
     needs: build
     runs-on: self-hosted
- steps:
-    # Step 1: Checkout the code
-    - name: Pull image from docker hub
-      run: docker pull rakesh127/my-node-app:latest
-    - name: Run Docker Container
-      run: docker run -d -p 5000:5000 --name my-node-app-container -e MONGO_PASSWORD- '${{ secrets.DOCKER_PASSWORD }}' rakesh127/my-node-app:latest
+    steps:
+      # Step 1: Checkout the code
+      - name: Pull image from Docker Hub
+        run: docker pull rakesh127/my-node-app:latest
+      - name: Run Docker Container
+        run: docker run -d -p 5000:5000 --name my-node-app-container -e MONGO_PASSWORD="${{ secrets.DOCKER_PASSWORD }}" rakesh127/my-node-app:latest
 
-    
