--- a/cicd.yml
+++ b/cicd.yml
@@ -3,7 +3,7 @@ name: Deploy Node.js Application
 on:
   push:
     branches:
-      - mern-ec2-docker
+      - main
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v4
       - name: Login to DockerHub  
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - name: Build Docker Image
         run: docker build -t rakesh127/my-node-app:latest .
       - name: Publish Image to Docker Hub
