--- a/cicd.yml
+++ b/cicd.yml
@@ -24,5 +24,10 @@ jobs:
     steps:
       - name: Pull image from Docker Hub
         run: docker pull rakesh127/my-node-app:latest
+        - name: Stop and Remove Existing Container
+        run: |
+          docker stop my-react-app-container || true
+          docker rm my-react-app-container || true
+
       - name: Run Docker Container
         run: docker run -d -p 5000:5000 --name my-node-app-container -e MONGO_PASSWORD="${{ secrets.DOCKER_PASSWORD }}" rakesh127/my-node-app:latest
